overflow issue

--- a/styles/style.css
+++ b/styles/style.css
@@ -714,4 +714,11 @@ label{
     .hidden {
         height: 100px;
     }
+    .unhidden {
+        height: 1000px;
+    }
+    #dropdown {
+        overflow: hidden;
+        transition: height 0.6s ease-in-out
+    }
 }
